...
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FAFAFA"
    android:orientation="vertical"
    android:id="@+id/socio">
    <!-- this id added cause it needed in test-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

...
                        android:gravity="center_vertical"
                        android:text="@string/age"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/a1"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:background="@drawable/custom_edit_text"
                        android:ems="10"
                        android:inputType="number"
                        android:padding="5dp" />
...
                        android:gravity="center_vertical"
                        android:text="@string/height"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/a2"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:background="@drawable/custom_edit_text"
                        android:ems="10"
                        android:inputType="number"
                        android:padding="5dp" />
...
                        android:gravity="center_vertical"
                        android:text="@string/weight"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/a3"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:background="@drawable/custom_edit_text"
                        android:ems="10"
                        android:inputType="number"
                        android:padding="5dp" />
...
                        android:gravity="center_vertical"
                        android:text="@string/monthly_income"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/a4"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:background="@drawable/custom_edit_text"
                        android:ems="10"
                        android:inputType="number"
                        android:padding="5dp" />
...
                        android:text="@string/chronic_diseases"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                    <EditText
                        android:id="@+id/a8"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:background="@drawable/custom_edit_text"
                        android:ems="10"
                        android:hint="@string/ex_diabetes"
                        android:inputType="textPersonName"
...
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="1 / 4" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:text="@string/next" />
...
